--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ img.profile { width:140px; height:140px; border-radius:50%; object-fit:cover; }
 </head>
 <body>
 <header>
-<h1>AIM Research Lab</h1>
+<h1>AIM Research Lab (WIP)</h1>
 <nav>
 <a href="index.html">Home</a>
 <a href="research.html">Research</a>
@@ -79,7 +79,7 @@ img.profile { width:140px; height:140px; border-radius:50%; object-fit:cover; }
 
 
 <footer>
-<p>AIM Lab @ Yeshiva University Katz School</p>
+<p>AIM Lab @ YU Katz</p>
 <p>Funding: NSF | IEEE</p>
 <p>
 <a href="#">X</a> | <a href="#">LinkedIn</a>
