--- a/publications.html
+++ b/publications.html
@@ -1,61 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><title>AIM Lab | Publications</title>
-<style>
-body {
-margin: 0;
-font-family: Arial, Helvetica, sans-serif;
-line-height: 1.6;
-min-height: 100vh;
-display: flex;
-flex-direction: column;
+<head>
+<meta charset="UTF-8">
+<link rel="stylesheet" href="Resources/css/base.css">
+<title>AIM Research Lab | Publications</title>
+
+<script>
+function toggleMenu() {
+  document.getElementById("mainNav").classList.toggle("show");
 }
-header { background:#0a1f44; color:#fff; padding:1rem 2rem; }
-nav a {
-display: inline-block;
-padding: 0.5rem 1rem;
-margin-right: 0.5rem;
-border-radius: 6px;
-background: #ffffff;
-color: #0a1f44;
-text-decoration: none;
-font-weight: 600;
-transition: background 0.2s ease, transform 0.1s ease;
-}
-nav a:hover {
-background: #dbe4f3;
-transform: translateY(-1px);
-}
-nav a:hover { text-decoration:underline; }
-.hero { padding:4rem 2rem; background:#eef2f7; text-align:center; }
-.section { padding:3rem 2rem; max-width:1100px; margin:auto; }
-.cards { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:1.5rem; }
-.card { border:1px solid #ddd; border-radius:8px; padding:1.5rem; background:#fff; }
-footer {
-background: #0a1f44;
-color: #ffffff;
-padding: 2rem;
-text-align: center;
-margin-top: auto;
-}
-footer a { color:#ccc; margin:0 0.5rem; text-decoration:none; }
-footer a:hover { color:#fff; }
-img.profile { width:140px; height:140px; border-radius:50%; object-fit:cover; }
-.gallery img { width:100%; border-radius:8px; }
-</style>
+</script>
+
 </head>
+
 <body>
-<header><h1>Publications</h1>
-<nav>
-<a href="index.html">Home</a>
-<a href="research.html">Research</a>
-<a href="people.html">People</a>
-<a href="publications.html">Publications</a>
-<a href="facilities.html">Facilities</a>
 
+<header>
+  <div class="header-inner">
+    <!-- Logo -->
+    <div class="logo">
+      <img src="Resources/aim_lab_logo.png" alt="AIM Research Lab Logo">
+      <h1 style="margin:0;font-size:1.3rem;">Join Us</h1>
+    </div>
 
-<a href="contact.html">Contact</a>
-</nav>
+    <!-- Mobile Menu Button -->
+    <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
+    <!-- Navigation -->
+    <nav id="mainNav">
+      <a href="index.html">Home</a>
+      <a href="research.html">Research</a>
+      <a href="people.html">People</a>
+      <a href="publications.html">Publications</a>
+      <a href="facilities.html">Facilities</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
 </header>
 <section class="section">
 <ul>
@@ -63,6 +43,6 @@ img.profile { width:140px; height:140px; border-radius:50%; object-fit:cover; }
 <li>2024 - Generative Multimedia for AR Systems. <a href="#">PubMed</a></li>
 </ul>
 </section>
-<footer><p>AIM Lab @ Yeshiva University Katz School</p></footer>
+<footer><p>AIM Research Lab @ Yeshiva University Katz School</p></footer>
 </body>
 </html>
