--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ function toggleMenu() {
     <!-- Logo -->
     <div class="logo">
       <img src="Resources/aim_lab_logo.png" alt="AIM Research Lab Logo">
-      <h1 style="margin:0;font-size:1.3rem;">Join Us</h1>
+      <p style="margin:0;font-size:1.4rem;">AIM Research Lab @ Katz</p>
     </div>
 
     <!-- Mobile Menu Button -->
@@ -40,24 +40,41 @@ function toggleMenu() {
 
 
 <section class="hero">
-<h2>AI, IoT, and Multimedia (AIM) Research Lab</h2>
+<h2>AI, IoT, and Multimedia (AIM) Research Lab @ Katz School of Health and Science</h2>
 <p>Pioneering intelligent, connected, and immersive systems.</p>
-<img src="hero-demo.jpg" alt="AIoT sensor with AR overlay" style="max-width:70%; border-radius:12px;">
+<!-- <img src="hero-demo.jpg" alt="AIoT sensor with AR overlay" style="max-width:70%; border-radius:12px;"> -->
 </section>
 
 
 <section class="section">
 <h2>Lab Mission</h2>
 <p>The AIM Research Lab drives innovation at the intersection of AI algorithms, IoT edge systems, and multimedia processing to create intelligent, real-time applications for industry and academia.</p>
+<p>Funding: NSF | IEEE</p>
 </section>
 
 
-<footer>
-<p>AIM Research Lab @ YU Katz</p>
-<p>Funding: NSF | IEEE</p>
-<p>
-<a href="#">X</a> | <a href="#">LinkedIn</a>
-</p>
+<footer class="site-footer">
+  <div class="footer-inner">
+
+    <!-- Left: Logo + Name + Address -->
+    <div class="footer-left">
+      <img src="Resources/aim_lab_logo - full.png" alt="AIM Research Lab Logo">
+      <div>
+        <strong>AIM Research Lab</strong><br>
+        <!-- Yeshiva University<br> -->
+        Katz School of Science and Health<br>
+        215 Lexington Avenue, New York, NY 10016<br>
+        United States
+      </div>
+    </div>
+
+    <!-- Right: Social Links -->
+    <div class="footer-right">
+      <a href="#" aria-label="X (Twitter)">X</a>
+      <a href="#" aria-label="LinkedIn">LinkedIn</a>
+    </div>
+
+  </div>
 </footer>
 </body>
 </html>
