--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@ function toggleMenu() {
     <!-- Logo -->
     <div class="logo">
       <img src="Resources/aim_lab_logo.png" alt="AIM Research Lab Logo">
-      <h1 style="margin:0;font-size:1.3rem;">Join Us</h1>
+      <p style="margin:0;font-size:1.4rem;">AIM Research Lab @ Katz</p>
     </div>
 
     <!-- Mobile Menu Button -->
@@ -53,8 +53,28 @@ function toggleMenu() {
   </form>
 </section>
 
-<footer>
-  <p>AIM Research Lab @ Yeshiva University Katz School</p>
+<footer class="site-footer">
+  <div class="footer-inner">
+
+    <!-- Left: Logo + Name + Address -->
+    <div class="footer-left">
+      <img src="Resources/aim_lab_logo - full.png" alt="AIM Research Lab Logo">
+      <div>
+        <strong>AIM Research Lab</strong><br>
+        <!-- Yeshiva University<br> -->
+        Katz School of Science and Health<br>
+        215 Lexington Avenue, New York, NY 10016<br>
+        United States
+      </div>
+    </div>
+
+    <!-- Right: Social Links -->
+    <div class="footer-right">
+      <a href="#" aria-label="X (Twitter)">X</a>
+      <a href="#" aria-label="LinkedIn">LinkedIn</a>
+    </div>
+
+  </div>
 </footer>
 
 </body>
