--- a/research.html
+++ b/research.html
@@ -36,25 +36,238 @@ function toggleMenu() {
       <a href="contact.html">Contact</a>
     </nav>
   </div>
+
+  
+<style>
+  /* body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+  } */
+
+  /* Layout */
+  .research-layout {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  /* Sidebar */
+.research-sidebar {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0;
+}
+
+  .research-nav-item {
+    padding: 14px 24px;
+    cursor: pointer;
+    border-left: 4px solid transparent;
+    border: 2px solid navy;
+    margin: 2px;
+  }
+
+  .research-nav-item:hover {
+    background: #243d64;
+    color:rgb(244, 242, 242);
+  }
+
+  .research-nav-item.is-active {
+    background: #111827;
+    border-left-color: #3b82f6;
+    font-weight: bold;
+    color: white;
+  }
+
+  /* Content Area */
+  .research-main {
+    flex: 1;
+    padding: 30px 40px;
+    background: #f9fafb;
+  }
+
+  .research-main h2 {
+    margin-top: 0;
+    color: #111827;
+  }
+
+  .research-main h3 {
+    margin-bottom: 6px;
+    color: #1f2933;
+  }
+
+  .research-main p {
+    color: #374151;
+    line-height: 1.6;
+  }
+
+  .research-main ul {
+    padding-left: 18px;
+  }
+
+  .research-main li {
+    margin-bottom: 8px;
+  }
+
+  /* Sections */
+  .research-section {
+    display: none;
+  }
+
+  .research-section.is-active {
+    display: block;
+  }
+</style>
+
 </header>
 
 
 <section class="section">
 <div class="cards">
-<div class="card">
-<h3>AI-IoT Integration</h3>
-<p>Edge AI for predictive maintenance, anomaly detection, and scalable sensor networks.</p>
+
+<h2>Research Categories</h2>
+<div class="research-layout">
+
+  <!-- Sidebar -->
+  <div class="research-sidebar">
+    <div class="research-nav-item is-active" onclick="researchShow('ai', this)">AI</div>
+    <div class="research-nav-item" onclick="researchShow('iot', this)">IoT</div>
+    <div class="research-nav-item" onclick="researchShow('multimedia', this)">Multimedia</div>
+  </div>
+
+  <!-- Main Content -->
+  <main class="research-main">
+
+    <!-- AI -->
+    <section id="ai" class="research-section is-active">
+      <h2>Artificial Intelligence (AI)</h2>
+      <p>
+        Research focuses on machine learning, scalable data analytics, and intelligent perception
+        systems with an emphasis on efficiency, robustness, and real-world deployment.
+      </p>
+
+      <h3>Research Areas</h3>
+      <ul>
+        <li>AI / Machine Learning</li>
+        <li>On-device / Edge AI</li>
+        <li>Big Data Analytics</li>
+      </ul>
+
+      <h3>Key Projects</h3>
+      <ul>
+        <li>
+          <strong>ML-based Cooperative Perception for Autonomous Vehicles</strong>
+          <ul>
+            <li>Sensor data fusion using machine learning</li>
+            <li>mmWave-enabled scalable feature-map transmission</li>
+            <li>Improved safety and traffic efficiency</li>
+          </ul>
+        </li>
+
+        <li>
+          <strong>Efficient Fuzzy Clustering for Distributed Big Data</strong>
+          <ul>
+            <li>High-dimensional and mixed-type data clustering</li>
+            <li>Distributed and scalable algorithms</li>
+            <li>Simulation and real-data validation</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+
+    <!-- IoT -->
+    <section id="iot" class="research-section">
+      <h2>Internet of Things (IoT)</h2>
+      <p>
+        Research addresses smart, secure, and connected systems that integrate sensing,
+        communication, and intelligent analytics for healthcare and cyber-physical environments.
+      </p>
+
+      <h3>Research Areas</h3>
+      <ul>
+        <li>Internet of Things (IoT)</li>
+        <li>Connected Health</li>
+        <li>Cyber Security</li>
+        <li>Mobile & Wireless Communications</li>
+      </ul>
+
+      <h3>Key Projects</h3>
+      <ul>
+        <li>
+          <strong>IoT for Secure and Smart Connected Health</strong>
+          <ul>
+            <li>WBAN-based biomedical sensing</li>
+            <li>Physiological data analytics and prediction</li>
+            <li>Secure data transmission and privacy preservation</li>
+          </ul>
+        </li>
+
+        <li>
+          <strong>AI-IoT Integration</strong>
+          <ul>
+            <li>Edge AI for predictive maintenance</li>
+            <li>Anomaly detection in sensor networks</li>
+            <li>Scalable and intelligent IoT systems</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Multimedia -->
+    <section id="multimedia" class="research-section">
+      <h2>Multimedia</h2>
+      <p>
+        Research explores intelligent processing, analysis, and generation of multimedia data,
+        including video, audio, 3D content, and immersive media.
+      </p>
+
+      <h3>Research Areas</h3>
+      <ul>
+        <li>Multimedia Communications and Processing</li>
+        <li>Multimedia Security</li>
+        <li>Multimedia Intelligence</li>
+      </ul>
+
+      <h3>Key Topics</h3>
+      <ul>
+        <li>Real-time video analytics</li>
+        <li>3D point cloud processing</li>
+        <li>Generative media for AR/VR</li>
+      </ul>
+    </section>
+
+  </main>
 </div>
-<div class="card">
-<h3>Multimedia Intelligence</h3>
-<p>Real-time video analytics, 3D point clouds, and generative media for AR/VR.</p>
-</div>
-<div class="card">
-<h3>Applications</h3>
-<p>Smart manufacturing, healthcare monitoring, autonomous systems.</p>
-</div>
-</div>
+
+</div>  
+
+
+
+
+
+
+<script>
+  function researchShow(id, el) {
+    document.querySelectorAll('.research-section').forEach(sec => {
+      sec.classList.remove('is-active');
+    });
+
+    document.querySelectorAll('.research-nav-item').forEach(item => {
+      item.classList.remove('is-active');
+    });
+
+    document.getElementById(id).classList.add('is-active');
+    el.classList.add('is-active');
+  }
+</script>
+
 </section>
+
+<!--  -->
+<!--  -->
+
+
 <footer class="site-footer">
   <div class="footer-inner">
 
