general update aio

--- a/contact.html
+++ b/contact.html
@@ -39,18 +39,30 @@ function toggleMenu() {
 </header>
 
 <section class="section">
-  <h2>Open Positions</h2>
+  <h2>Contacts</h2>
   <p>PhD and MS opportunities in AI, IoT, and Multimedia Systems.</p>
-  <ul>
-    <li>Skills: Python, MATLAB, Embedded IoT, Computer Vision</li>
-  </ul>
+<div id="contact-honggang-wang" class="contact-section">
+  <p><strong>Honggang Wang</strong><br>
+     Professor and Department Chair
+  </p>
 
-  <form>
-    <input type="text" placeholder="Name"><br><br>
-    <input type="email" placeholder="Email"><br><br>
-    <textarea placeholder="Research Interests"></textarea><br><br>
-    <button type="submit">Apply</button>
-  </form>
+  <p>
+    Department of Graduate Computer Science and Engineering<br>
+    Katz School of Science and Health<br>
+    Yeshiva University
+  </p>
+
+  <p>
+    205 Lexington Avenue<br>
+    Manhattan, New York, NY 10016
+  </p>
+
+  <p>
+    Email:
+    <a href="mailto:wanghbell@ieee.org">wanghbell@ieee.org</a> or
+    <a href="mailto:Honggang.wang@yu.edu">Honggang.wang@yu.edu</a>
+  </p>
+</div>
 </section>
 
 <footer class="site-footer">
