--- a/facilities.html
+++ b/facilities.html
@@ -96,57 +96,57 @@ function toggleMenu() {
 
 
 
-<section>
+<section style="margin-bottom: 20px; margin-left: 20px;">
   <h2>Facilities</h2>
 
   <div class="facilities-grid">
 
     <div class="facility-card">
-      <a href="nvidia-a100.html">
-        <img src="nvidia-a100.jpg" alt="Nvidia A100 GPU cluster" class="facility-photo">
+      <a href="https://docs.nvidia.com/dgx/dgxa100-user-guide/introduction-to-dgxa100.html">
+        <img src="Resources/facilities/Nvidia A100 8x.png" alt="Nvidia A100 GPU cluster" class="facility-photo">
         <div class="facility-name">Nvidia A100 GPU Cluster</div>
       </a>
     </div>
 
     <div class="facility-card">
-      <a href="nvidia-a4000.html">
-        <img src="nvidia-a4000.jpg" alt="Nvidia A4000 GPU workstations" class="facility-photo">
+      <a href="https://www.nvidia.com/en-us/products/workstations/rtx-a4000/">
+        <img src="Resources/facilities/Nvidia A4000 GPU.jpg" alt="Nvidia A4000 GPU workstations" class="facility-photo">
         <div class="facility-name">Nvidia A4000 GPU Workstations</div>
       </a>
     </div>
 
     <div class="facility-card">
-      <a href="nvidia-a6000.html">
-        <img src="nvidia-a6000.jpg" alt="Nvidia A6000 workstations" class="facility-photo">
+      <a href="https://www.nvidia.com/en-us/products/workstations/rtx-a6000/">
+        <img src="Resources/facilities/Nvidia A6000 Workstation.jpg" alt="Nvidia A6000 workstations" class="facility-photo">
         <div class="facility-name">Nvidia A6000 Workstations</div>
       </a>
     </div>
 
     <div class="facility-card">
       <a href="unitree-g1.html">
-        <img src="unitree-g1.jpg" alt="Unitree G1 Humanoid Robot" class="facility-photo">
+        <img src="Resources/facilities/G1 robot.webp" alt="Unitree G1 Humanoid Robot" class="facility-photo">
         <div class="facility-name">Unitree G1 Humanoid Robot</div>
       </a>
     </div>
 
     <div class="facility-card">
-      <a href="jetson-nano.html">
-        <img src="jetson-nano.jpg" alt="Nvidia Jetson Nano Robot Car" class="facility-photo">
+      <a href="#">
+        <img src="Resources/facilities/Robot Car Jetson Nano.png" alt="Nvidia Jetson Nano Robot Car" class="facility-photo">
         <div class="facility-name">Nvidia Jetson Nano Robot Car</div>
       </a>
     </div>
 
     <div class="facility-card">
-      <a href="3d-printer.html">
-        <img src="3d-printer.jpg" alt="3D Printer" class="facility-photo">
-        <div class="facility-name">3D Printer</div>
+      <a href="#">
+        <img src="Resources/facilities/3d Printer 3v3 ke.jpg" alt="3D Printer" class="facility-photo">
+        <div class="facility-name">3D Printer (Creality)</div>
       </a>
     </div>
 
     <div class="facility-card">
-      <a href="sdr-hardware.html">
-        <img src="sdr.jpg" alt="Software Defined Radio Hardware" class="facility-photo">
-        <div class="facility-name">Software Defined Radio Hardware</div>
+      <a href="#">
+        <img src="Resources/facilities/sdr sample.jpg" alt="Software Defined Radio Hardware" class="facility-photo">
+        <div class="facility-name">Software Defined Radio</div>
       </a>
     </div>
 
