--- a/people.html
+++ b/people.html
@@ -99,14 +99,35 @@ function toggleMenu() {
 
   <div class="people-grid">
     <div class="person-card">
-      <a href="faculty-profile-1.html">
-        <img src="faculty1.jpg" alt="Faculty Name" class="person-photo">
+      <a href="https://www.honggangwang.org/home">
+        <img src="Resources/faculty/Dr. Honggang Wang.jpg" alt="Faculty Name" class="person-photo">
+        <div class="person-name">Dr. Honggang Wang</div>
+      </a>
+    </div>
+
+    <div class="person-card">
+      <a href="#">
+        <img src="faculty2.jpg" alt="Faculty Name" class="person-photo">
         <div class="person-name">Dr. Faculty Name</div>
       </a>
     </div>
 
     <div class="person-card">
-      <a href="faculty-profile-2.html">
+      <a href="#">
+        <img src="faculty3.jpg" alt="Faculty Name" class="person-photo">
+        <div class="person-name">Dr. Faculty Name</div>
+      </a>
+    </div>
+
+    <div class="person-card">
+      <a href="#">
+        <img src="##" alt="Faculty Name" class="person-photo">
+        <div class="person-name">Dr. Faculty Name</div>
+      </a>
+    </div>
+
+    <div class="person-card">
+      <a href="#">
         <img src="faculty2.jpg" alt="Faculty Name" class="person-photo">
         <div class="person-name">Dr. Faculty Name</div>
       </a>
@@ -118,6 +139,7 @@ function toggleMenu() {
         <div class="person-name">Dr. Faculty Name</div>
       </a>
     </div>
+
   </div>
 </section>
 
@@ -129,25 +151,48 @@ function toggleMenu() {
 
   <div class="people-grid">
     <div class="person-card">
-      <a href="student-profile-1.html">
-        <img src="student1.jpg" alt="Student Name" class="person-photo">
-        <div class="person-name">Student Name</div>
+      <a href="##">
+        <img src="Resources/students/Dengyi Liu.jpg" alt="Dengyi Liu" class="person-photo">
+        <div class="person-name">Dengyi Liu</div>
       </a>
     </div>
 
     <div class="person-card">
-      <a href="student-profile-2.html">
-        <img src="student2.jpg" alt="Student Name" class="person-photo">
-        <div class="person-name">Student Name</div>
+      <a href="##">
+        <img src="Resources/students/Ye Liu.JPG" alt="Ye Liu" class="person-photo">
+        <div class="person-name">Ye Liu</div>
       </a>
     </div>
 
     <div class="person-card">
-      <a href="student-profile-3.html">
+      <a href="##">
+        <img src="Resources/students/Sahil.jpeg" alt="Sahil Kumar" class="person-photo">
+        <div class="person-name">Sahil Kumar</div>
+      </a>
+    </div>
+
+        <div class="person-card">
+      <a href="##">
+        <img src="Resources/students/Namrata.jpeg" alt="Namrata Patel" class="person-photo">
+        <div class="person-name">Namrata Patel</div>
+      </a>
+    </div>
+
+    <div class="person-card">
+      <a href="##">
+        <img src="Resources/students/Nobel.jpeg" alt="Nobel" class="person-photo">
+        <div class="person-name">Ashikur Nobel</div>
+      </a>
+    </div>
+
+    <div class="person-card">
+      <a href="##">
         <img src="student3.jpg" alt="Student Name" class="person-photo">
         <div class="person-name">Student Name</div>
       </a>
     </div>
+
+    
   </div>
 </section>
 
