--- a/facilities.html
+++ b/facilities.html
@@ -123,7 +123,7 @@ function toggleMenu() {
     </div>
 
     <div class="facility-card">
-      <a href="unitree-g1.html">
+      <a href="#">
         <img src="Resources/facilities/G1 robot.webp" alt="Unitree G1 Humanoid Robot" class="facility-photo">
         <div class="facility-name">Unitree G1 Humanoid Robot</div>
       </a>
