--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@ function toggleMenu() {
   <div class="header-inner">
     <!-- Logo -->
     <div class="logo">
-      <img src="Resources/aim_lab_logo.png" alt="AIM Research Lab Logo">
+      <a href="index.html"><img src="Resources/aim_lab_logo.png" alt="AIM Research Lab Logo"></a>
       <p style="margin:0;font-size:1.4rem;">AIM Research Lab @ Katz</p>
     </div>
 
