--- a/people.html
+++ b/people.html
@@ -152,8 +152,16 @@ function toggleMenu() {
   <div class="people-grid">
     <div class="person-card">
       <a href="#">
-        <img src="Resources/faculty/#" alt="Hieu Ngo" class="person-photo">
+        <img src="Resources/students/henry-ngo.webp" alt="Hieu Ngo" class="person-photo">
         <div class="person-name">Hieu Ngo</div>
+      </a>
+    </div>
+
+    <div class="person-card">
+      <a href="##">
+        <img src="Resources/alumni/sai-praveen.jpg" alt="Sai Praveen Kadiyala" class="person-photo">
+        <div class="person-name">Sai Praveen Kadiyala</div>
+        <div>(Ph.D., Indian Institute of Technology, Kharagpur), Yeshiva University</div>
       </a>
     </div>
 
