--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ function toggleMenu() {
 <section class="section">
 <h2>Lab Mission</h2>
 <p>The AIM Research Lab drives innovation at the intersection of AI algorithms, IoT edge systems, and multimedia processing to create intelligent, real-time applications for industry and academia.</p>
-<p>Funding: NSF | IEEE</p>
+<p>Funding: NSF | NIH | DOT| Others</p>
 </section>
 
 
