--- a/facilities.html
+++ b/facilities.html
@@ -96,7 +96,7 @@ function toggleMenu() {
 
 
 
-<section style="margin-bottom: 20px; margin-left: 20px;">
+<section  class="section">
   <h2>Facilities</h2>
 
   <div class="facilities-grid">
