--- a/facilities.html
+++ b/facilities.html
@@ -111,14 +111,14 @@ function toggleMenu() {
     <div class="facility-card">
       <a href="https://www.nvidia.com/en-us/products/workstations/rtx-a4000/">
         <img src="Resources/facilities/Nvidia A4000 GPU.jpg" alt="Nvidia A4000 GPU workstations" class="facility-photo">
-        <div class="facility-name">Nvidia A4000 GPU Workstations</div>
+        <div class="facility-name">Nvidia RTX A4000 GPU Workstations</div>
       </a>
     </div>
 
     <div class="facility-card">
       <a href="https://www.nvidia.com/en-us/products/workstations/rtx-a6000/">
         <img src="Resources/facilities/Nvidia A6000 Workstation.jpg" alt="Nvidia A6000 workstations" class="facility-photo">
-        <div class="facility-name">Nvidia A6000 Workstations</div>
+        <div class="facility-name">Nvidia RTX A6000 Workstations</div>
       </a>
     </div>
 
