--- a/people.html
+++ b/people.html
@@ -106,7 +106,7 @@ function toggleMenu() {
       </a>
     </div>
 
-    <div class="person-card">
+    <!-- <div class="person-card">
       <a href="#">
         <img src="faculty2.jpg" alt="Faculty Name" class="person-photo">
         <div class="person-name">Dr. Faculty Name</div>
@@ -139,7 +139,7 @@ function toggleMenu() {
         <img src="faculty3.jpg" alt="Faculty Name" class="person-photo">
         <div class="person-name">Dr. Faculty Name</div>
       </a>
-    </div>
+    </div> -->
 
   </div>
 </section>
