--- a/people.html
+++ b/people.html
@@ -96,7 +96,7 @@ function toggleMenu() {
 <div class="cards">
 <!--  -->
 <section>
-  <h2>Faculties</h2>
+  <h2>Faculty</h2>
 
   <div class="people-grid">
     <div class="person-card">
